<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculator.CalculatorActivity">

    <TextView
        android:id="@+id/formulaTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        app:columnCount="4"
        app:rowCount="4">

        <android.support.design.button.MaterialButton
            android:id="@+id/digit_7"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/digit_7"
            android:onClick="onButtonClick"
            app:layout_row="0"
            app:layout_column="0"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/digit_8"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/digit_8"
            android:onClick="onButtonClick"
            app:layout_row="0"
            app:layout_column="1"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/digit_9"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/digit_9"
            android:onClick="onButtonClick"
            app:layout_row="0"
            app:layout_column="2"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/digit_6"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/digit_6"
            android:onClick="onButtonClick"
            app:layout_row="1"
            app:layout_column="0"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/digit_5"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/digit_5"
            android:onClick="onButtonClick"
            app:layout_row="1"
            app:layout_column="1"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/digit_4"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/digit_4"
            android:onClick="onButtonClick"
            app:layout_row="1"
            app:layout_column="2"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/digit_3"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/digit_3"
            android:onClick="onButtonClick"
            app:layout_row="2"
            app:layout_column="0"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/digit_2"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/digit_2"
            android:onClick="onButtonClick"
            app:layout_row="2"
            app:layout_column="1"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/digit_1"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/digit_1"
            android:onClick="onButtonClick"
            app:layout_row="2"
            app:layout_column="2"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/digit_0"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/digit_0"
            android:onClick="onButtonClick"
            app:layout_row="3"
            app:layout_column="1"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/dot"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/dot"
            android:onClick="onButtonClick"
            app:layout_row="3"
            app:layout_column="0"/>
        <android.support.design.button.MaterialButton
            android:id="@+id/equal"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/equal"
            android:onClick="onButtonClick"
            app:layout_row="3"
            app:layout_column="2"/>
        <android.support.design.button.MaterialButton
            android:id="@+id/plus"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/plus"
            android:onClick="onButtonClick"
            app:layout_row="3"
            app:layout_column="3"/>
        <android.support.design.button.MaterialButton
            android:id="@+id/minus"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/minus"
            android:onClick="onButtonClick"
            app:layout_row="2"
            app:layout_column="3"/>
        <android.support.design.button.MaterialButton
            android:id="@+id/time"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/time"
            android:onClick="onButtonClick"
            app:layout_row="1"
            app:layout_column="3"/>
        <android.support.design.button.MaterialButton
            android:id="@+id/divide"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/divide"
            android:onClick="onButtonClick"
            app:layout_row="0"
            app:layout_column="3"/>
    </android.support.v7.widget.GridLayout>

</LinearLayout>